report temp bugfix

--- a/client/views/templates/matchValidation/_matchGrid.html
+++ b/client/views/templates/matchValidation/_matchGrid.html
@@ -104,7 +104,7 @@
                 <input type="radio"> Confirm
               </label>
               &nbsp;&nbsp;
-              <label class="btn btn-default btn-sm validationButton dismissMatch" align="left" style="pointer-events: none;" data-id={{id}} ata-type="matchValidation"> 
+              <label class="btn btn-default btn-sm validationButton dismissMatch" align="left" style="pointer-events: none;" data-id={{id}} data-type="matchValidation"> 
                 <input type="radio"> Dismiss
               </label>
               {{else}}
